fix: logo PDF carregada via classpath (compatível com Docker/jar)
- RequisicaoService: usa ClassPathResource em vez de caminho de arquivo
  para carregar a logo nos PDFs gerados — funciona dentro do Docker/jar
- application-dev.properties: aponta logo para resources/imagens/
- Adiciona logo-seaport.png em resources/imagens/

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>